--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.5.0+cpu
 streamlit
-pinecone-client
 openai
-sentence-transformers
 python-dotenv
 psycopg2-binary
-cohere
+weaviate
